(images) Fix overflowing PI annotation on IE

--- a/astrobin/static/astrobin/scss/astrobin.scss
+++ b/astrobin/static/astrobin/scss/astrobin.scss
@@ -1752,6 +1752,7 @@ BODY:first-of-type ul.as-list, x:-moz-any-link, x:default { /* Target FF 3.5+ */
 
 .main-image {
   max-width: 620px;
+  overflow: hidden;
 
   .main-image-inner {
     z-index: 1;
